Fix long diffs (#514)
* Fix pretty-diff appearance on 1000+ diff lines

* Truncate output when shown in diff

Change made to improve performance. Truncating the output to a maximum of 999 lines ensures that the line diff computes quickly.

> Takes me about 40 seconds until the diff appears. The culprit is the diff library (https://www.npmjs.com/package/diff), which is based on an O(ND) algorithm. For your example (`for i in range(1,10000):print(i)` in Smith Numbers), nearly all of the output was different, so D≈N, and it was effectively O(N^2) (assuming the package isn't using the O(NlgN+D) suffix tree variation). Super slow for N≈10000 lines.

--- a/css/hole-diff.css
+++ b/css/hole-diff.css
@@ -1,4 +1,4 @@
-#diff-content {
+.diff-content {
     display: grid;
     grid-template-columns:
         [arg] max-content
